Fix anagram creation duplicating letters when word is short. Thanks to <walch.martin@web.de> for the patch.

BUG:334107
FIXED-IN: 4.13.1
(cherry picked from commit 94d899c449a91e8e3863c94316401b74a13bdae2)